[package]
name = "wobject3"
version = "0.2.0"
authors = ["Alistair Turnbull <welly@minworks.co.uk>"]
rust-version = "1.85" # The version in Debian Trixie.
description = "A prototype for the Welly programming language, focusing on the object system"
homepage = "https://wellylang.org"
repository = "https://github.com/apt1002/wobject3"
license = "BSD-2-Clause"
keywords = ["welly", "object"]
categories = ["compilers"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
welly-main = {path = "/home/apt1002/welly-main"}
welly-parser = {path = "/home/apt1002/welly-parser"}
ansi_term = "0.12.1"
arrayvec = "0.7.6"
